# rustcmd

./: Cargo.toml  README.md
rustcmd/: Cargo.toml  LICENSE-APACHE  README.md
rustcmd-macros/: Cargo.toml  LICENSE-MIT  README.md
rustcmd-macros/src/: lib.rs
rustcmd-macros/src/execute/: mod.rs
rustcmd/src/: and_command_chain.rs  command.rs  command_segment.rs  command_sequence.rs  command_with_io.rs  env_unset_handler.rs  execute_error.rs  lib.rs  or_command_chain.rs  redirections.rs
