[workspace]
members = ["rustcmd", "rustcmd-macros"]
resolver = "2"

[profile.release]
lto = "thin" # TODO: benchmark what setting is best here

[profile.test]
opt-level = 3           # Enable optimizations
debug-assertions = true # True is the default value, but make it clear we care
overflow-checks = true  # True is the default value, but make it clear we care
