[package]
authors = ["Isaac Chen"]
description = "Procedural macros for the RustCMD crate."
name = "rustcmd-macros"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/ijchen/rustcmd"
documentation = "https://docs.rs/rustcmd-macros"
include = ["/src/", "/Cargo.toml", "/README.md", "/LICENSE-*"]
publish = false

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.86"
quote = "1.0.37"
syn = { version = "2.0.77", features = ["extra-traits", "full"] }

[dev-dependencies]
